# Skye

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  README.md  bootstrap  circle.yml  configure.ac  package
doc/: Doxyfile  capture_strategy_motivation.dox  conditional_returns_dd.dox  development-setup.dox  future_plans.dox  namespaces.dox
doc/listings/examples/tutorials/: calculator.dox  greetings.dox
doc/tutorials/: hello_world.dox
e/: config.cpp  config.hpp  config_files_location.cpp  config_files_location.hpp  info.cpp  info.hpp  job_execution_request.cpp  job_execution_request.hpp  job_execution_status.cpp  job_execution_status.hpp  job_result.hpp  job_spec.cpp  job_spec.hpp  logging.hpp  ut_config_files_location.cpp  ut_info.cpp  ut_job_execution_request.cpp  ut_job_spec.cpp
e/mocking/asio/: acceptor.cpp  acceptor.hpp  async_accept_member_function.hpp  async_accept_traits.cpp  async_accept_traits.hpp  async_connect_member_function.hpp  async_connect_traits.cpp  async_connect_traits.hpp  async_function.hpp  async_io_member_function.hpp  async_io_traits.cpp  async_io_traits.hpp  endpoint.hpp  iterator.hpp  resolver.hpp  service.cpp  service.hpp  socket.cpp  socket.hpp  ut_async_io_member_function.cpp  ut_iterator.cpp
e/mocking/asio/detail/: async_function_argument_capture.hpp
e/mocking/common/: mock_function.hpp  mock_template_function.hpp  ut_invocation_args_wrapper.cpp  ut_mock_function.cpp  ut_mock_template_function.cpp
e/mocking/common/detail/: argument_capture_by_value.hpp  argument_wrapper.hpp  boost_reporting.hpp  function_assertion.hpp  generic_arglist_capture.cpp  generic_arglist_capture.hpp  invocation_args_wrapper.hpp  mock_returner.hpp  unknown_arguments_capture_by_value.hpp  ut_argument_capture_by_value.cpp  ut_argument_wrapper.cpp  ut_unknown_argument_capture_by_value.cpp  ut_validator.cpp  validator.hpp
e/testing/: generic_arglist_capture.hpp  invocation.cpp  invocation.hpp  invocation_args_wrapper.hpp  mock_acceptor.cpp  mock_acceptor.hpp  mock_async_accept_member_function.hpp  mock_async_accept_traits.cpp  mock_async_accept_traits.hpp  mock_async_connect_member_function.hpp  mock_async_connect_traits.cpp  mock_async_connect_traits.hpp  mock_async_function.hpp  mock_async_io_invocation.cpp  mock_async_io_invocation.hpp  mock_async_io_member_function.hpp  mock_async_io_traits.cpp  mock_async_io_traits.hpp  mock_endpoint.hpp  mock_function.hpp  mock_iterator.hpp  mock_protocol.hpp  mock_resolver.hpp  mock_returner.hpp  mock_service.cpp  mock_service.hpp  mock_socket.cpp  mock_socket.hpp  mock_template_function.hpp  tuple_streaming.hpp  ut_invocation.cpp  ut_invocation_args_wrapper.cpp  ut_mock_async_io_member_function.cpp  ut_mock_function.cpp  ut_mock_iterator.cpp  ut_mock_template_function.cpp
examples/tutorials/: calculator.cpp  greetings.cpp
skye/: mock_function.hpp  mock_template_function.hpp  ut_conditional_returns.cpp  ut_conditional_returns_template.cpp  ut_mock_function.cpp  ut_mock_template_function.cpp
skye/asio/: acceptor.cpp  acceptor.hpp  async_accept_member_function.hpp  async_connect_member_function.hpp  async_io_member_function.hpp  endpoint.hpp  iterator.hpp  protocol.hpp  resolver.hpp  service.cpp  service.hpp  socket.cpp  socket.hpp  ut_async_io_member_function.cpp  ut_iterator.cpp
skye/asio/detail/: async_function_argument_capture.hpp  test_service_singleton.hpp  ut_async_function_argument_capture.cpp
skye/common/: mock_function.hpp  mock_template_function.hpp  ut_mock_function.cpp  ut_mock_template_function.cpp
skye/common/detail/: argument_wrapper.hpp  boost_assertion_reporting.hpp  function_assertion.hpp  mock_returner.hpp  tuple_streaming.hpp  unknown_arguments_capture_by_value.hpp  ut_argument_capture_by_value.cpp  ut_argument_wrapper.cpp  ut_unknown_argument_capture_by_value.cpp  ut_validator.cpp  validator.hpp
skye/detail/: argument_wrapper.hpp  assertion_reporting.hpp  boost_assertion_reporting.hpp  default_return.hpp  function_assertion.hpp  iostream_assertion_reporting.hpp  mock_returner.hpp  set_action_proxy.hpp  tuple_streaming.hpp  unknown_arguments_capture_by_value.hpp  ut_argument_capture_by_value.cpp  ut_argument_wrapper.cpp  ut_unknown_argument_capture_by_value.cpp  ut_validator.cpp  validator.hpp
test/: circleci_test_capture.sh
